[gd_scene load_steps=3 format=2]

[ext_resource path="res://twoseccardframe.png" type="Texture" id=1]
[ext_resource path="res://card_templates/basecardtemplate.gd" type="Script" id=2]

[node name="basecardtemplate" type="Node2D"]
position = Vector2( 39, 4 )
script = ExtResource( 2 )

[node name="frame" type="Sprite" parent="."]
position = Vector2( 144, 192 )
texture = ExtResource( 1 )

[node name="romaji_name_label" type="Label" parent="."]
margin_left = 29.0
margin_top = 23.0
margin_right = 134.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost_label" type="Label" parent="."]
margin_left = 215.0
margin_top = 25.0
margin_right = 255.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effect_text_label" type="Label" parent="."]
margin_left = 43.0
margin_top = 260.0
margin_right = 252.0
margin_bottom = 352.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cast_button" type="Button" parent="."]
show_behind_parent = true
margin_top = 2.0
margin_right = 288.0
margin_bottom = 382.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="symbol_one" type="Sprite" parent="." groups=[
"symbol_sprites",
]]
position = Vector2( 239, 129 )

[node name="symbol_two" type="Sprite" parent="." groups=[
"symbol_sprites",
]]

[node name="symbol_three" type="Sprite" parent="." groups=[
"symbol_sprites",
]]

[node name="symbol_four" type="Sprite" parent="." groups=[
"symbol_sprites",
]]

[node name="symbol_five" type="Sprite" parent="." groups=[
"symbol_sprites",
]]

[node name="symbol_six" type="Sprite" parent="." groups=[
"symbol_sprites",
]]

[node name="symbol_seven" type="Sprite" parent="." groups=[
"symbol_sprites",
]]

[connection signal="pressed" from="cast_button" to="." method="_on_cast_button_pressed"]
